--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@rails/webpacker": "4.2.2",
     "axios": "^0.19.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "bulma-carousel": "^4.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bulma-components": "^3.2.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
+    "react-slick": "^0.25.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.1.0",
     "turbolinks": "^5.2.0"
   },
